Additional work on the AddLocation form

--- a/src/main/java/com/fdorigo/igadmin/app/BasePage.html
+++ b/src/main/java/com/fdorigo/igadmin/app/BasePage.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<title>Illuminate Gym</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" title="stylesheet" />
+	<link rel="stylesheet" href="form.css" type="text/css" media="screen" title="stylesheet" />
 </head>
 
 <body>
