--- a/src/main/java/com/fdorigo/igadmin/app/BasePage.html
+++ b/src/main/java/com/fdorigo/igadmin/app/BasePage.html
@@ -6,6 +6,8 @@
 	<title>Illuminate Gym</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" title="stylesheet" />
 	<link rel="stylesheet" href="form.css" type="text/css" media="screen" title="stylesheet" />
+	<script src="igadmin.js"></script>
+	
 </head>
 
 <body>
