Added tabbed panel

--- a/src/main/java/com/fdorigo/igadmin/app/forms/AddLocation.html
+++ b/src/main/java/com/fdorigo/igadmin/app/forms/AddLocation.html
@@ -1,8 +1,6 @@
 <html>
-
-<wicket:extend>
+<wicket:panel>
 	<div id="stylized">
-
 		<form wicket:id="form">
 			<fieldset>
 				<h1>Add Location</h1>
@@ -76,5 +74,5 @@
 
 	</div>
 
-</wicket:extend>
+</wicket:panel>
 </html>
