--- a/src/main/java/com/fdorigo/igadmin/app/forms/AddTrainer.html
+++ b/src/main/java/com/fdorigo/igadmin/app/forms/AddTrainer.html
@@ -1,5 +1,5 @@
 <html>
-<wicket:extend>
+<wicket:panel>
 	<div id="stylized">
 
 		<form wicket:id="form">
@@ -89,5 +89,5 @@
 
 	</div>
 
-</wicket:extend>
+</wicket:panel>
 </html>
