--- a/src/main/java/com/fdorigo/igadmin/app/forms/AddTrainer.html
+++ b/src/main/java/com/fdorigo/igadmin/app/forms/AddTrainer.html
@@ -2,6 +2,7 @@
 <wicket:panel>
 	<div id="stylized">
 
+		<span wicket:id="feedback"></span>
 		<form wicket:id="form">
 			<fieldset>
 				<h1>Add Trainer</h1>
