Changes for client/trainer/location grouping.

--- a/src/main/java/com/fdorigo/igadmin/app/forms/AddClient.html
+++ b/src/main/java/com/fdorigo/igadmin/app/forms/AddClient.html
@@ -6,8 +6,8 @@
 		
 		<form wicket:id="form">
 			<fieldset>
-				<h1>Add Trainer</h1>
-				<p>Add a new trainer to the database</p>
+				<h1>Add Client</h1>
+				<p>Add a new client to the database</p>
 
 				<div class="form_input_line">
 					<label>Name 
@@ -62,18 +62,9 @@
 					<label>
 						&nbsp;
 					</label>				
-					<select style="width:100px;" type="text" wicket:id="location"></select> 
 					<input style="width:120px;" type="text" wicket:id="addressCity" /> 
 					<select style="width:100px;" type="text" wicket:id="addressState"></select> 
 					<input style="width:60px;" type="text" wicket:id="addressZip" />
-				</div>
-
-				<div class="form_input_line">
-					<label>
-						Compensation
-						<span class="small">Specify the compensation rate</span>
-					</label>				
-					<input type="text" wicket:id="compRate" /> 
 				</div>
 
 				<div class="form_input_line">
