Added authentication pages
Auth/Roles added to main page

--- a/src/main/java/com/fdorigo/igadmin/app/HomePage.html
+++ b/src/main/java/com/fdorigo/igadmin/app/HomePage.html
@@ -14,7 +14,10 @@
 			<div id="title"></div>	
 		</div>
 		
-		<div id="navigation"></div>
+		<div id="navigation">
+		<a wicket:id="login">Login</a>
+		<a wicket:id="logout">Logout</a>
+		</div>
 
 		<div id="content">
 			<span wicket:id="tabbedPanel" class="tabpanel">[tabbed panel will be here]</span>
