--- a/src/main/java/com/fdorigo/igadmin/app/auth/LoginPage.html
+++ b/src/main/java/com/fdorigo/igadmin/app/auth/LoginPage.html
@@ -11,25 +11,6 @@
 </head>
 
 <body>
-	<div id="feedback" wicket:id="feedback"></div>
-	<form wicket:id="form">
-		<div class="login_form">
-			<table border="0" cellpadding="">
-				<tr>
-					<td align="right">Email Address:</td>
-					<td><input id="username" wicket:id="username"
-						type="text" size="35" /></td>
-				</tr>
-				<tr>
-					<td align="right">Password:</td>
-					<td><input wicket:id="password" type="password" size="35" /></td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-					<td><input type="submit" value="Login" /></td>
-				</tr>
-			</table>
-		</div>
-	</form>
+    <span wicket:id="signInPanel"/>
 </body>
 </html>
